@@ -34,7 +34,7 @@ public class LREM extends VoidOperation
     {
         long l2 = ((Long) stack.pop()).longValue();
         long l1 = ((Long) stack.pop()).longValue();
-        stack.push(new Long(l1 % l2));
+        stack.push(Long.valueOf(l1 % l2));
     }
 
     /** {@inheritDoc} */
