@@ -41,7 +41,7 @@ public class SIPUSH extends VoidOperation
     public final void execute(final OperandStack stack, final Constant[] constantPool,
             final LocalVariable[] localVariables)
     {
-        stack.push(new Integer(this.value));
+        stack.push(Integer.valueOf(this.value));
     }
 
     /** {@inheritDoc} */
